Prevents cropping or aspect ratio issues

--- a/hugo/assets/scss/publications.scss
+++ b/hugo/assets/scss/publications.scss
@@ -37,7 +37,6 @@
 
             img {
                 max-width:32em;
-                max-height:24em;
                 width: 100%;
             }
 
